# tax-shevach-360

./: .gitignore  README.md  algorithm-report.html  algorithm-suggestions.html  build.sh  dev.sh  render.yaml  skills-lock.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  auth_routes.py  boi_api.py  calculator.py  contract_parser.py  cpi_data.py  depreciation.py  email_service.py  local_parser.py  main.py  models.py  regex_parser.py  routes.py  tax_rates.py
backend/tests/: test_algorithm_improvements.py  test_auth.py  test_boi_api.py  test_calculator.py  test_contract_parser.py  test_coverage_gaps.py  test_cpi_data.py  test_depreciation.py  test_email_and_main.py  test_models.py  test_routes.py  test_tax_rates.py  test_upload_flow.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  mockData.ts  types.ts  utils.ts
frontend/src/components/: CodeNameModal.tsx  ErrorBoundary.tsx  LoginPage.tsx  Onboarding.tsx  Results.tsx  StepAcquisition.tsx  StepDeductions.tsx  StepExemptions.tsx  StepSale.tsx  StepSellers.tsx  UploadContract.tsx
